==> OpenAutomationTechnologies/openSAFETY_DEMO/app/target/stm32f103rb/pcpserial-ma.c <==
#include <common/pcpserial.h>
#include <stm32f1xx_hal.h>
#define SPIx                             SPI1
#define SPIx_CLK_ENABLE()                __HAL_RCC_SPI1_CLK_ENABLE()
#define DMAx_CLK_ENABLE()                __HAL_RCC_DMA1_CLK_ENABLE()
#define SPIx_SCK_GPIO_CLK_ENABLE()       __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_MISO_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_MOSI_GPIO_CLK_ENABLE()      __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_NSS_GPIO_CLK_ENABLE()       __HAL_RCC_GPIOB_CLK_ENABLE()
#define SPIx_CLK_DISABLE()               __HAL_RCC_SPI1_CLK_DISABLE()
#define SPIx_SCK_PIN                     GPIO_PIN_5
#define SPIx_MISO_PIN                    GPIO_PIN_6
#define SPIx_MOSI_PIN                    GPIO_PIN_7
#define SPIx_GPIO_PORT                   GPIOA
#define SPIx_SSN_PIN                     GPIO_PIN_6
#define SPIx_SSN_GPIO_PORT               GPIOB
#define SPIx_TX_DMA_CHANNEL              DMA1_Channel3
#define SPIx_RX_DMA_CHANNEL              DMA1_Channel2
#define SPIx_DMA_TX_IRQn                 DMA1_Channel3_IRQn
#define SPIx_DMA_RX_IRQn                 DMA1_Channel2_IRQn
#define SPIx_DMA_TX_IRQHandler           DMA1_Channel3_IRQHandler
#define SPIx_DMA_RX_IRQHandler           DMA1_Channel2_IRQHandler

BOOL pcpserial_init(tHandlerParam * pTransParam_p, tPcpSerialTransferFin pfnTransfFin_p)
{
    UINT8 fReturn = FALSE;
    GPIO_InitTypeDef GPIO_InitStruct;

    UNUSED_PARAMETER(pTransParam_p);

    if(initSpi())
    {
        initNvic();

        SPIx_NSS_GPIO_CLK_ENABLE();

        /* SPI_NSS_Soft pin configuration */
        GPIO_InitStruct.Pin = SPIx_SSN_PIN;
        GPIO_InitStruct.Speed = GPIO_SPEED_MEDIUM;
        GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        HAL_GPIO_Init(SPIx_SSN_GPIO_PORT, &GPIO_InitStruct);

        /* Set NSS high (not active) */
        HAL_GPIO_WritePin(SPIx_SSN_GPIO_PORT, SPIx_SSN_PIN, GPIO_PIN_SET);

        /* Assign transfer finished interrupt callback function */
        pfnTransfFin_l = pfnTransfFin_p;

        fReturn = TRUE;
    }

    return fReturn;
}

void pcpserial_exit(void)
{
    pfnTransfFin_l =  NULL;

    pfnTransfFin_l =  NULL;

    HAL_GPIO_DeInit(SPIx_SSN_GPIO_PORT, SPIx_SSN_PIN);

}

BOOL pcpserial_transfer(tHandlerParam* pHandlParam_p)
{
    BOOL retVal = FALSE;
    UINT8* pConsWithInit = NULL;
    UINT8* pProdWithInit = NULL;
    UINT32 transLen = 0;

    if(pHandlParam_p != NULL)
    {
        if(pHandlParam_p->consDesc_m.buffSize_m == pHandlParam_p->prodDesc_m.buffSize_m)
        {
            pConsWithInit = pHandlParam_p->consDesc_m.pBuffBase_m - 4;
            pProdWithInit = pHandlParam_p->prodDesc_m.pBuffBase_m - 4;
            transLen = pHandlParam_p->consDesc_m.buffSize_m + 4;

            /* Wait until SPI is really ready for this transfer */
            while(HAL_SPI_GetState(&SpiHandle_l) == HAL_SPI_STATE_BUSY_TX_RX)
            {
                /* Busy wait here until transfer is finished! */
            }

            /* Set NSS low (active) */
            HAL_GPIO_WritePin(SPIx_SSN_GPIO_PORT, SPIx_SSN_PIN, GPIO_PIN_RESET);

            /* Enable the DMA rx channel */
            if(HAL_SPI_TransmitReceive_DMA(&SpiHandle_l, pProdWithInit, pConsWithInit, transLen) == HAL_OK)
            {
                retVal = TRUE;
            }
        }
    }

    return retVal;
}

static void initGpio(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;

    GPIO_InitStruct.Pin = SPIx_SCK_PIN | SPIx_MISO_PIN | SPIx_MOSI_PIN;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
    HAL_GPIO_Init(SPIx_GPIO_PORT, &GPIO_InitStruct);
}

static BOOL initSpi(void)
{
    BOOL retVal = FALSE;

    memset(&SpiHandle_l, 0, sizeof(SPI_HandleTypeDef));

    /* SPI configuration */
    SpiHandle_l.Instance = SPIx;
    SpiHandle_l.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
    SpiHandle_l.Init.Direction = SPI_DIRECTION_2LINES;
    SpiHandle_l.Init.CLKPhase = SPI_PHASE_1EDGE;
    SpiHandle_l.Init.CLKPolarity = SPI_POLARITY_LOW;
    SpiHandle_l.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
    SpiHandle_l.Init.CRCPolynomial = 7;
    SpiHandle_l.Init.DataSize = SPI_DATASIZE_8BIT;
    SpiHandle_l.Init.FirstBit = SPI_FIRSTBIT_MSB;
    SpiHandle_l.Init.NSS = SPI_NSS_SOFT;
    SpiHandle_l.Init.TIMode = SPI_TIMODE_DISABLE;
    SpiHandle_l.Init.Mode = SPI_MODE_MASTER;

    if(HAL_SPI_Init(&SpiHandle_l) == HAL_OK)
    {
        retVal = TRUE;
    }

    return retVal;
}

static BOOL initDma(SPI_HandleTypeDef* pSpiHandler_p)
{

    BOOL retVal = FALSE;

    memset(&DmaRxHandle_l, 0, sizeof(DMA_HandleTypeDef));
    memset(&DmaTxHandle_l, 0, sizeof(DMA_HandleTypeDef));


    /* Enable DMAx clock */
    DMAx_CLK_ENABLE();

    /* Configure DMAx - Receive channel (SPI -> memory) */
    DmaRxHandle_l.Instance = SPIx_RX_DMA_CHANNEL;
    DmaRxHandle_l.Init.Direction = DMA_PERIPH_TO_MEMORY;          /* P2M transfer mode                 */
    DmaRxHandle_l.Init.PeriphInc = DMA_PINC_DISABLE;              /* Peripheral increment mode Disable */
    DmaRxHandle_l.Init.MemInc = DMA_MINC_ENABLE;                  /* Memory increment mode Enable      */
    DmaRxHandle_l.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE; /* Peripheral data alignment : Byte  */
    DmaRxHandle_l.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;    /* memory data alignment : Byte      */
    DmaRxHandle_l.Init.Mode = DMA_NORMAL;                         /* Normal DMA mode                   */
    DmaRxHandle_l.Init.Priority = DMA_PRIORITY_HIGH;              /* priority level : high             */

    if(HAL_DMA_Init(&DmaRxHandle_l) == HAL_OK)
    {
        __HAL_LINKDMA(pSpiHandler_p, hdmarx, DmaRxHandle_l);

        /* Configure DMAx - Transmit channel (memory -> SPI) */
        DmaTxHandle_l.Instance = SPIx_TX_DMA_CHANNEL;
        DmaTxHandle_l.Init.Direction = DMA_MEMORY_TO_PERIPH;          /* M2P transfer mode                 */
        DmaTxHandle_l.Init.PeriphInc = DMA_PINC_DISABLE;              /* Peripheral increment mode Disable */
        DmaTxHandle_l.Init.MemInc = DMA_MINC_ENABLE;                  /* Memory increment mode Enable      */
        DmaTxHandle_l.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE; /* Peripheral data alignment : Byte  */
        DmaTxHandle_l.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;    /* memory data alignment : Byte      */
        DmaTxHandle_l.Init.Mode = DMA_NORMAL;                         /* Normal DMA mode                   */
        DmaTxHandle_l.Init.Priority = DMA_PRIORITY_LOW;               /* priority level : low              */
        if(HAL_DMA_Init(&DmaTxHandle_l) == HAL_OK)
        {
            __HAL_LINKDMA(pSpiHandler_p, hdmatx, DmaTxHandle_l);

            retVal = TRUE;
        }
    }

    return retVal;

}

static void initNvic(void)
{
    /* NVIC configuration for DMA transfer complete interrupt (SPIx_TX) */
    HAL_NVIC_SetPriority(SPIx_DMA_TX_IRQn, 1, 0);
    HAL_NVIC_EnableIRQ(SPIx_DMA_TX_IRQn);

    /* NVIC configuration for DMA transfer complete interrupt (SPIx_RX) */
    HAL_NVIC_SetPriority(SPIx_DMA_RX_IRQn, 1, 1);
    HAL_NVIC_EnableIRQ(SPIx_DMA_RX_IRQn);
}
